fix: remove white color from active navbar link for better visibility

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -106,7 +106,6 @@ html {
 
 .navbar a.active {
   background-color: rgba(255, 255, 255, 0.2);
-  color: white;
 }
 
 .navbar {
